// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render 0 expenses 1`] = `
<div>
  <h1>
    Viewing 
    0
     
    expenses
     
  </h1>
</div>
`;

exports[`Should render 1 expenses 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     
    totalling €6,00
  </h1>
</div>
`;

exports[`Should render multiples expenses 1`] = `
<div>
  <h1>
    Viewing 
    14
     
    expenses
     
    totalling €13 090,20
  </h1>
</div>
`;
